// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Default 1`] = `
Array [
  <h1
    className="title"
  >
    Example Title
  </h1>,
  <p
    className="description"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  </p>,
]
`;

exports[`Storyshots Header With Header Link 1`] = `
Array [
  <h1
    className="title"
  >
    <a
      href="#"
    >
      Example Link Title
    </a>
  </h1>,
  <p
    className="description"
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
  </p>,
]
`;
